TAG: littriageload-6-0-17-10
DATE: 06/10/2021
STAFF: lec
wts2-649/littriageload/littriage_noctua/littriage_goa/J:# & Relevance

TAG: littriageload-6-0-17-9
TAG: littriageload-6-0-17-8
DATE: 06/07/2021
STAFF: lec
post build 39
1. missing : New Failed PDF's in Needs_Review folder: 0
2. Literature Triage Level 0 Errors : duplicate PDF file name 

TAG: littriageload-6-0-17-7
DATE: 06/03/2021
STAFF: lec
b39-509/Lit Triage load issue/findNLMrefresh.sh

TAG: littriageload-6-0-17-6
DATE: 05/25/2021
STAFF: lec
b39-509/Lit Triage load issue/findNLMrefresh.sh

TAG: littriageload-6-0-17-5
TAG: littriageload-6-0-17-4
DATE: 05/18/2021
STAFF: lec
b39-509/Lit Triage load issue/improve execution time
fix bug
secondary: change from 30 to 50

TAG: littriageload-6-0-17-3
DATE: 05/17/2021, 05/18/2021
STAFF: lec
b39-509/Lit Triage load issue/improve execution time
secondary/GXD/turn back on: and s.isCurrent = 1

TAG: littriageload-6-0-17-2
DATE: 05/14/2021
STAFF: lec
b39-509/Lit Triage load issue/improve execution time

TAG: littriageload-6-0-17-1
DATE: 05/11/2021
STAFF: lec
TR13307/Adding PMIDS from Noctua load into MGI
TR13349/Build 39/Relevance/Secondary Triage
TR13288/Lit triage load - Handle text extraction problems better

TAG: littriageload-6-0-16-7
DATE: 04/21/2021
STAFF: lec
python3/add str()/level2 errors

TAG: littriageload-6-0-16-6
DATE: 01/04/2021
STAFF: lec
add some try/except blocks to level1SanityChecks

TAG: littriageload-6-0-16-5
DATE: ????
STAFF: jbeal
????

TAG: littriageload-6-0-16-4
DATE: 09/09/2020
STAFF: lec
added littriageload.pdf.log

TAG: littriageload-6-0-16-3
DATE: 08/24/2020
STAFF: jak
improve stderr capture from PdfParser during text extraction

TAG: littriageload-6-0-16-2
TAG: littriageload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: littriageload-6-0-15-5
DATE: 06/18/2020
STAFF: lec
TR13321/ltlo: NLM refresh folder adding an extra lit record

TAG: littriageload-6-0-15-4
DATE: 03/10/2020
STAFF: lec